[gd_scene load_steps=3 format=3 uid="uid://dae5bimxcs2th"]

[ext_resource type="Script" uid="uid://beorrvlj6l2o7" path="res://dialogue_box.gd" id="1_fu8b5"]
[ext_resource type="Texture2D" uid="uid://06shxrn5idsf" path="res://use/dialogbox.png" id="2_tm68y"]

[node name="dialogue_box" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 7.0
offset_top = 391.0
offset_right = 1144.0
offset_bottom = 643.0
script = ExtResource("1_fu8b5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.491
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -558.267
offset_top = -241.0
offset_right = 576.5
offset_bottom = 1.0
texture = ExtResource("2_tm68y")
expand_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.029
anchor_right = 0.39
anchor_bottom = 0.26
offset_left = -33.205
offset_right = 0.449982
offset_bottom = 0.0799942
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 35
text = "NPC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.066
anchor_top = 0.277
anchor_right = 0.748
anchor_bottom = 0.872
offset_left = 0.43
offset_top = -0.0340042
offset_right = -6.46002
offset_bottom = -9.024
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 25
text = "this is a place holder"

[node name="CharacterImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.872
anchor_top = 0.5
anchor_right = 0.872
anchor_bottom = 0.5
offset_left = -142.464
offset_top = -221.0
offset_right = 112.536
offset_bottom = 112.0
expand_mode = 3
stretch_mode = 5

[node name="VoicePlayer" type="AudioStreamPlayer2D" parent="."]
